tambah line nama naim muzaffar

--- a/Gi-Ret-PSY-Cloud-Page-1/page-1.html
+++ b/Gi-Ret-PSY-Cloud-Page-1/page-1.html
@@ -30,6 +30,7 @@
                     <input class="check"  type="checkbox" checked="checked" name="remember"> Remember me>
                     </label>
                     <p id="salah">*Pass / ID salah</p>
+                    <p>naim muzaffar</p>
               </div>
             </div>
         </div>
